Prevent overflow

--- a/res/site.scss
+++ b/res/site.scss
@@ -30,7 +30,7 @@ header {
 }
 
 #headerbar {
-  width: $width;
+  max-width: $width;
   margin-left: auto;
   margin-right: auto;
   padding: 8px 0px 8px 0px;
@@ -76,7 +76,7 @@ header {
   ul {
     margin: 0px auto 0px auto;
     padding: 0px 0px 0px 0px;
-    width: $width;
+    max-width: $width;
     li {
       padding: 8px 8px 8px 8px;
       list-style-type: none;
@@ -89,7 +89,7 @@ header {
 }
 
 .content {
-  width: $width;
+  max-width: $width;
   background-color: $background-color;
   margin: 0px auto 0px auto;
   :first-child {
@@ -107,7 +107,7 @@ footer {
   margin: 0px 0px 0px 0px;
   padding: 8px 0px 8px 0px;
   div {
-    width: $width;
+    max-width: $width;
     margin-left: auto;
     margin-right: auto;
   }
